@@ -1,3 +1,11 @@
+2009-03-24 Sergii Stoian <stoyan255@gmail.com>
+
+	* Framework/PCProjectBuilder.m: Add some comments
+	(parseCompilerLine:): Implemented gcc output for compiling and
+	linking. Set currentBuildFile var on file compilation.
+	(cleanupAfterMake),(build:),(parseBuildLine:),(buildDidTerminate):
+	Update status field of builder panel and project window
+
 2009-03-23 Sergii Stoian <stoyan255@gmail.com>
 
 	* Framework/PCProjectBuilder.m: Change type of currentBuildPath var 
